--- a/js/default.css
+++ b/js/default.css
@@ -1,4 +1,4 @@
-body{margin:0;padding:0;background-image:url("https://sworld.com.vn/wp-content/uploads/2019/03/5-1-e1582183709211.png");background-size:cover;background-repeat:no-repeat;font-size:14px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
+body{margin:0;padding:0;background-image:url("https://dongnaiart.edu.vn/wp-content/uploads/2022/01/hinh-nen-dong-trai-tim.png");background-size:cover;background-repeat:no-repeat;font-size:14px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
 a {color:##00ff45;font-size:14px;text-decoration:none;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
