--- a/js/default.css
+++ b/js/default.css
@@ -1,4 +1,4 @@
-body{margin:0;padding:0;background-image:url("https://scr.vn/wp-content/uploads/2020/07/H%C3%ACnh-n%E1%BB%81n-d%E1%BB%85-th%C6%B0%C6%A1ng-cute.jpg");background-size:cover;background-repeat:no-repeat;font-size:14px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
+body{margin:0;padding:0;background-image:url("https://scr.vn/wp-content/uploads/2020/07/N%E1%BB%81n-h%E1%BB%93ng-tr%C3%A1i-tim.jpg");background-size:cover;background-repeat:no-repeat;font-size:14px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
 a {color:##00ff45;font-size:14px;text-decoration:none;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
