--- a/js/default.css
+++ b/js/default.css
@@ -1,4 +1,4 @@
-body{margin:0;padding:0;background-image:url("https://img.freepik.com/premium-vector/heart-halftone-valentine-s-day-background-red-transparent-hearts-white_257312-146.jpg?w=2000");background-size:cover;background-repeat:no-repeat;font-size:14px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
+body{margin:0;padding:0;background-image:url("https://mega.com.vn/media/news/2206_hinh-nen-trai-tim-may-tinh123.jpg");background-size:cover;background-repeat:no-repeat;font-size:15px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
 a {color:##00ff45;font-size:14px;text-decoration:none;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
