--- a/js/default.css
+++ b/js/default.css
@@ -1,5 +1,5 @@
-body{margin:0;padding:0;background-image:url("https://haycafe.vn/wp-content/uploads/2021/12/Hinh-anh-cho-Powerpoint-trai-tim-hong.jpg");background-size:cover;background-repeat:no-repeat;font-size:15px;font-family:'sans-serif','sans-serif',sans-serif;color:#660086;overflow:auto}
-a {color:##00ff45;font-size:14px;text-decoration:none;}
+body{margin:0;padding:0;background-image:url("https://haycafe.vn/wp-content/uploads/2021/12/Hinh-anh-cho-Powerpoint-trai-tim-hong.jpg");background-size:cover;background-repeat:no-repeat;font-size:20px;font-family:'sans-serif','sans-serif',sans-serif;color:#8c007c;overflow:auto}
+a {color:#8c007c;font-size:15px;text-decoration:none;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
 #text{width:400px;height:425px;left:60px;top:80px;position:absolute;}
