--- a/js/default.css
+++ b/js/default.css
@@ -3,7 +3,7 @@ a {color:#8c007c;font-size:15px;text-decoration:none;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
 #text{width:400px;height:425px;left:60px;top:80px;position:absolute;}
-#code{display:2px;font-size:20px;}
+#code{display:none;font-size:25px;}
 #clock-box {position:absolute;left:60px;top:550px;font-size:28px;display:none;}
 #clock-box a {font-size:28px;text-decoration:none;}
 #clock{margin-left:48px;}
