--- a/js/default.css
+++ b/js/default.css
@@ -11,5 +11,5 @@ a {color:#8c007c;font-size:15px;text-decoration:none;}
 #canvas{margin:0 auto;width:1100px;height:680px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
-#code{width: 500px; color: #3b6900; font-family:lobster;}
+#code{width: 500px; color: #3b6900; font-family:Lobster;}
 .space{margin-right:150px;}
